アニカレロゴ　背景透過

--- a/anikarekari.html
+++ b/anikarekari.html
@@ -72,7 +72,7 @@
               </div>
         </p>
       <!--タイトル-->
-      <p class=""><h1 class="logo"><a href =""><img src="src/WebContent/img/anilogo.jpg" alt="アニカレロゴ"></a></h1></p>
+      <p class=""><h1 class="logo"><a href =""><img src="src/WebContent/img/logo.png" alt="アニカレロゴ"></a></h1></p>
       
       
       <!--ポイント交換-->  
