--- a/scheduleEdit.html
+++ b/scheduleEdit.html
@@ -57,14 +57,10 @@
             <!--キャラの吹き出し-->
             <div class="animalcomment">
                 <img scr="ma"><img scr="ma">
+                <p>予定・ToDoリストの編集<br>日記の記入ができるよ～<br>日記を記入してポイントをゲットしよう！
+                </p>  
                 
-                <!-- ToDo -->
-
-                <!-- 今日の予定 -->
-                <p>今日はランチ！</p>
-                <!-- 今日の格言 -->
-                <p>あああああああああああああああああああああああああああ</p>
-            </div>
+              </div>
 
             <!--- キャラクター --->
             <div class="animals">
@@ -85,11 +81,11 @@
                     <table>
                       <tr>
                         <td><input type="" class="" name="stamp"></td>
-                        <td><input type="text" class="" name="title" placeholder="タイトルを入力"></td>
+                        <td><input type="text" class="titlefont" name="title" placeholder="タイトルを入力"></td>
                       </tr>
                       <tr>
-                        <td><input type="" class="" name="starttime"></td>
-                        <td><input type="" class="" name="endtime"></td>
+                        <td><input type="text" class="" name="starttime"></td>
+                        <td><input type="text" class="" name="endtime"></td>
                       </tr>
                       <tr>
                         <td><input type="text" class="" name="place"></td>
@@ -124,10 +120,10 @@
                       <table>
                         <tr>
                           <td><input type="checkbox" id="" name="checkbox" value="missioncomplete"></td>
-                          <td><input type="text" class="" name="task" placeholder="タスク名を入力"></td>
+                          <td><input type="text" class="titlefont" name="task" placeholder="タスク名を入力"></td>
                         </tr>
                         <tr>
-                          <td><input type="" class="" name="deadline"></td>
+                          <td><input type="text" class="" name="deadline"></td>
                         </tr>
                         <tr>
                           <td>メモ</td>
