Dao、model担当箇所変更

--- a/diary.html
+++ b/diary.html
@@ -24,7 +24,7 @@
             <label for="drawer-check" class="drawer-open"><span></span></label>
                 <nav class="drawer-content">
                   <!-- リンクをつなげる -->
-                     <ul class=" drawar-list">
+                    <ul class=" drawar-list">
                        <li><a href="" class="btn btn-border">トップページ　</a></li>
                        <li><a href="" class="btn btn-border">予定・ＴｏＤｏ</a></li>
                        <li><a href="" class="btn btn-border">　今日の予定　</a></li>
@@ -33,7 +33,7 @@
                        <li><a href="" class="btn btn-border">　マイページ　</a></li>
                        <li><a href="" class="btn btn-border">　ログアウト　</a></li>
                        
-      </ul>
+                    </ul>
                 </nav>
               </div>
         </p>
@@ -88,85 +88,82 @@
           <div class="table-contents">
             <table class="start_list">
               <tr>
-                <th>day</th>
-                <th>title</th>
+                <th class="fixed1">day</th>
+                <th class="fixed1">title</th>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
+              </tr><tr>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
+              </tr><tr>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
+              </tr><tr>
+                <td>1</td>
+                <td>寿司食べた</td>
+              </tr><tr>
+                <td>1</td>
+                <td>寿司食べた</td>
+              </tr><tr>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
               <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
+                <td>1</td>
+                <td>寿司食べた</td>
               </tr>
-              <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
-              </tr>
-              <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
-              </tr>
-              <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
-              </tr>
-              <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
-              </tr>
-              <tr>
-                <th>1</th>
-                <th>寿司食べた</th>
-              </tr>
+
+
             </table>
           </div>
         </div>
