--- a/login.html
+++ b/login.html
@@ -47,6 +47,6 @@
             <p>&copy;Copyright AnimalCalender All rights reserved.</p>
             <!-- 要相談 -->
         </footer>
-
+    </div>
 </body>
 </html>
