今日のラスト

--- a/item_change.html
+++ b/item_change.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ポイント交換所|アニカレ</title>
-  <link rel= "stylesheet" href="src/WebContent/css/all.css">
+  <link rel= "stylesheet" href="all.css">
   <link rel= "stylesheet" href="src/WebContent/css/item_change.css">
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
